--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <!-- Header section starts -->
+    <header class="header" id="header">
+
+        <div class="header-content">
+
+            <div class="logo">
+                <a href="3">R</a>
+            </div>
+
+            <nav class="navbar">
+                <a href="#">Home</a>
+                <a href="#">Explore</a>
+                <a href="#">About Us</a>
+                <a href="#">Help</a>
+
+            </nav>
+
+            <i class='bx bx-moon change-theme' id="theme-btn"></i>
+
+
+        </div>
+
+        <div class="main-content">
+            <h2 class="title">Your luxurious home <br> is waiting for you</h2>
+            <p>we have more than 7,000 luxurious <br> properties around to world to show you!</p>
+
+            <a href="#" class="btn">Explore More</a>
+        </div>
+
+
+    </header>
+    <!-- Header section ends -->
     
 
 
