html for header and service section added!

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Estate Website Clone</title>
 
-    <!-- Custom CSS file -->
+    <!-- custom css link -->
     <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Boxicon link -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- Font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+
 </head>
 <body>
 
@@ -17,14 +25,16 @@
         <div class="header-content">
 
             <div class="logo">
-                <a href="3">R</a>
+                <a href="#">R</a>
             </div>
 
             <nav class="navbar">
-                <a href="#">Home</a>
-                <a href="#">Explore</a>
-                <a href="#">About Us</a>
-                <a href="#">Help</a>
+                <a href="#home">Home</a>
+                <a href="#service">Services</a>
+                <a href="#about">About Us</a>
+                <a href="#gallery">Explore</a>
+                <a href="#purchase">Environment</a>
+                <a href="#subscribe">Help</a>
 
             </nav>
 
@@ -35,7 +45,7 @@
 
         <div class="main-content">
             <h2 class="title">Your luxurious home <br> is waiting for you</h2>
-            <p>we have more than 7,000 luxurious <br> properties around to world to show you!</p>
+            <p>We have more than 7,000 luxurious <br> properties around to world to show you!</p>
 
             <a href="#" class="btn">Explore More</a>
         </div>
@@ -43,6 +53,49 @@
 
     </header>
     <!-- Header section ends -->
+
+
+    <!-- Main Section starts -->
+
+    <main>
+
+        <!-- Services Section starts -->
+        <section class="service" id="service">
+            <h3 class="service-title">Our Services</h3>
+            <p class="service-para">When it comes to real estate and properties, we're very happy step of the way</p>
+
+            <div class="box-container">
+                <div class="box insurance">
+                    <i class="fa-solid fa-house-circle-check"></i>
+                    <div class="content">
+                        <h3>Property Insurance</h3>
+                        <p>Property insurance provides protection against most risks to property, such as fire, theft...
+                        </p>
+                    </div>
+                </div>
+                <div class="box advantage">
+                    <i class="fa-solid fa-piggy-bank"></i>
+                    <div class="content">
+                        <h3>Advantage</h3>
+                        <p>All these properties have amazing prices, and you will find thousands of properties to choose
+                            from...</p>
+                    </div>
+                </div>
+                <div class="box commission">
+                    <i class="fa-solid fa-hand-holding-dollar"></i>
+                    <div class="content">
+                        <h3>Low Commission</h3>
+                        <p>We offer competitive commission structure that are straight forward and fair, making it
+                            simple
+                            and affordable...</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Services Section ends -->
+    </main>
+
+    <!-- Main Section ends -->
     
 
 
