html for about section!

--- a/index.html
+++ b/index.html
@@ -93,6 +93,46 @@
             </div>
         </section>
         <!-- Services Section ends -->
+
+
+        <!-- About Us section starts -->
+        <section class="about" id="about">
+            <div class="about-img">
+                <img src="./img/about.jpg" alt="">
+            </div>
+
+            <div class="about-content">
+                <h3 class="about-title">We are the best and <br> most trusted real <br> estate agent</h3>
+                <p class="about-para">We are a trusted real estate agent with more than a decade of <br> experience. You
+                    can trust us.</p>
+
+                <div class="checks">
+
+                    <div class="check-content">
+                        <i class='bx bxs-check-circle'></i>
+                        <p>60k partners have worked with us</p>
+                    </div>
+
+                    <div class="check-content">
+                        <i class='bx bxs-check-circle'></i>
+                        <p>Professional and experienced resources</p>
+                    </div>
+
+                    <div class="check-content">
+                        <i class='bx bxs-check-circle'></i>
+                        <p>Provide the best service for users</p>
+                    </div>
+                </div>
+
+                <div class="about-btn">
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+            </div>
+        </section>
+        <!-- About Us section ends -->
+
+
+        
     </main>
 
     <!-- Main Section ends -->
