markup for gallery section!

--- a/index.html
+++ b/index.html
@@ -132,7 +132,43 @@
         <!-- About Us section ends -->
 
 
-        
+        <!-- Image Gallery Section starts -->
+        <section class="gallery" id="gallery">
+
+            <h3 class="gallery-title">Explore with Us </h3>
+
+            <div class="box">
+                <div class="gallery-box">
+                    <img src="./img/gallery2/1st/1.jpg" alt="">
+                    <img src="./img/gallery2/1st/2.jpg" alt="">
+                    <img src="./img/gallery2/1st/3.jpg" alt="">
+                    <img src="./img/gallery2/1st/4.jpg" alt="">
+
+                </div>
+                <div class="gallery-box">
+                    <img src="./img/gallery2/2nd/5.jpg" alt="">
+                    <img src="./img/gallery2/2nd/6.jpg" alt="">
+                    <img src="./img/gallery2/2nd/7.jpg" alt="">
+                    <img src="./img/gallery2/2nd/8.jpg" alt="">
+                    <img src="./img/gallery2/2nd/9.jpg" alt="">
+
+                </div>
+                <div class="gallery-box">
+                    <img src="./img/gallery2/3rd/11.jpg" alt="">
+                    <img src="./img/gallery2/2nd/8.jpg" alt="">
+                    <img src="./img/gallery2/2nd/9.jpg" alt="">
+                    <img src="./img/gallery2/3rd/12.jpg" alt="">
+
+                </div>
+                <div class="gallery-box">
+                    <img src="./img/gallery2/1st/4.jpg" alt="">
+                    <img src="./img/gallery2/3rd/18.jpg" alt="">
+                    <img src="./img/gallery2/2nd/10.jpg" alt="">
+                    <img src="./img/gallery2/1st/2.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Image Gallery Section ends -->
     </main>
 
     <!-- Main Section ends -->
