purchase section added!

--- a/index.html
+++ b/index.html
@@ -169,8 +169,92 @@
             </div>
         </section>
         <!-- Image Gallery Section ends -->
-    </main>
 
+
+        
+        <!-- Purchase section starts -->
+        <section class="purchase" id="purchase">
+
+            <h3 class="purchase-title">This is the most closest <br> properties to your location</h3>
+
+            <div class="purchase-container">
+
+                <div class="purchase-content">
+                    <img src="./img/gallery2/purchase/1.jpg" alt="">
+                    <h3>Resident Complex</h3>
+                    <p>Mississauga ontario</p>
+
+                    <div class="cost">
+                        <div class="price">
+                            <span>$17,209.000</span>
+                        </div>
+                        <div class="view-details">
+                            <a href="#" class="btn">View details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="purchase-content">
+                    <img src="./img/gallery2/purchase/2.jpg" alt="">
+                    <h3>Townhouse</h3>
+                    <p>Mississauga ontario</p>
+
+                    <div class="cost">
+                        <div class="price">
+                            <span>$7,800.000</span>
+                        </div>
+                        <div class="view-details">
+                            <a href="#" class="btn">View details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="purchase-content">
+                    <img src="./img/gallery2/purchase/3.jpg" alt="">
+                    <h3>Mansion in the woods</h3>
+                    <p>Mississauga ontario</p>
+
+                    <div class="cost">
+                        <div class="price">
+                            <span>$5,200.000</span>
+                        </div>
+                        <div class="view-details">
+                            <a href="#" class="btn">View details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="purchase-content">
+                    <img src="./img/gallery2/purchase/4.jpg" alt="">
+                    <h3>Villa</h3>
+                    <p>Mississauga ontario</p>
+
+                    <div class="cost">
+                        <div class="price">
+                            <span>$12,900.000</span>
+                        </div>
+                        <div class="view-details">
+                            <a href="#" class="btn">View details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Purchase section ends -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </main>
     <!-- Main Section ends -->
     
 
