review section added!

--- a/index.html
+++ b/index.html
@@ -281,6 +281,156 @@
 
 
 
+        
+        <!-- Review section starts -->
+        <section class="review" id="review">
+            <h3 class="review-title">What's users say about <br> our service</h3>
+
+            <div class="review-box">
+
+                <div class="users odd">
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                    <div class="info">
+                        <img src="./img/pic-1.png" alt="">
+
+                        <div class="info-detail">
+                            <h3>Katoptris</h3>
+                            <p>India</p>
+                        </div>
+                    </div>
+
+                    <div class="user-content">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At doloremque veritatis inventore
+                            quos dolorem modi minus sapiente autem minima totam.</p>
+                    </div>
+                </div>
+
+                <div class="users">
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                    <div class="info">
+                        <img src="./img/pic-2.png" alt="">
+
+                        <div class="info-detail">
+                            <h3>Hermione Granger</h3>
+                            <p>Japan</p>
+                        </div>
+                    </div>
+
+                    <div class="user-content">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half'></i>
+                        <i class='bx bx-star'></i>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At doloremque veritatis inventore
+                            quos dolorem modi minus sapiente autem minima totam.</p>
+                    </div>
+                </div>
+
+                <div class="users odd">
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                    <div class="info">
+                        <img src="./img/pic-3.png" alt="">
+
+                        <div class="info-detail">
+                            <h3>Talhah Yunus</h3>
+                            <p>Pakistan</p>
+                        </div>
+                    </div>
+
+                    <div class="user-content">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At doloremque veritatis inventore
+                            quos dolorem modi minus sapiente autem minima totam.</p>
+                    </div>
+                </div>
+
+                <div class="users">
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                    <div class="info">
+                        <img src="./img/pic-4.png" alt="">
+
+                        <div class="info-detail">
+                            <h3>Ginny Weasley</h3>
+                            <p>Russia</p>
+                        </div>
+                    </div>
+
+                    <div class="user-content">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bx-star'></i>
+                        <i class='bx bx-star'></i>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At doloremque veritatis inventore
+                            quos dolorem modi minus sapiente autem minima totam.</p>
+                    </div>
+                </div>
+
+                <div class="users odd">
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                    <div class="info">
+                        <img src="./img/pic-1.png" alt="">
+
+                        <div class="info-detail">
+                            <h3>Aleemrk</h3>
+                            <p>Pakistan</p>
+                        </div>
+                    </div>
+
+                    <div class="user-content">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bx-star'></i>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At doloremque veritatis inventore
+                            quos dolorem modi minus sapiente autem minima totam.</p>
+                    </div>
+                </div>
+
+                <div class="users">
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                    <div class="info">
+                        <img src="./img/pic-2.png" alt="">
+
+                        <div class="info-detail">
+                            <h3>Luna Lovegood</h3>
+                            <p>Indonesia</p>
+                        </div>
+                    </div>
+
+                    <div class="user-content">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half'></i>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At doloremque veritatis inventore
+                            quos dolorem modi minus sapiente autem minima totam.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Review section ends -->
+
+
+
 
 
 
