footer for landingpage!

--- a/index.html
+++ b/index.html
@@ -473,19 +473,84 @@
         </section>
         <!-- Subscribe section ends -->
 
-
-
-
-
-
-
-
-
-
-
-
     </main>
     <!-- Main Section ends -->
+
+
+
+
+
+
+    
+    <!-- Footer Section starts -->
+    <footer class="footer" id="footer">
+
+        <div class="footer-main  footer-common">
+            <div class="footer-logo">
+
+                <div class="content-handle">
+                    <h3 class="content-handle-logo">R</h3>
+                    <h3 id="real-master">RealMaster</h3>
+                    <p>Find a luxury residence that suits you, we will help to find the most suitable residence for
+                        you!</p>
+                </div>
+
+                <div class="social-handles">
+                    <a href="#"><i class='bx bxl-github'></i></a>
+                    <a href="#"><i class='bx bxl-dribbble'></i></a>
+                    <a href="#"><i class='bx bxl-pinterest'></i></a>
+                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin'></i></a>
+                    <a href="#"><i class='bx bxl-twitter'></i></a>
+                    <a href="#"><i class='bx bxl-twitch'></i></a>
+                    <a href="#"><i class='bx bxl-slack'></i></a>
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-private-individuals footer-common">
+            <div class="footer-title">
+                <h3>For private individuals</h3>
+            </div>
+
+            <div class="links">
+                <a href="#">Value a property</a>
+                <a href="#">Sell a property</a>
+                <a href="#">Search for real-estate agencies</a>
+            </div>
+        </div>
+
+        <div class="footer-info footer-common">
+            <div class="footer-title">
+                <h3>Information</h3>
+            </div>
+
+            <div class="links">
+                <a href="#">About Us</a>
+                <a href="#">Luxury Homes Blog</a>
+                <a href="#">Contact Us</a>
+            </div>
+        </div>
+
+        <div class="footer-settings footer-common">
+            <div class="footer-title">
+                <h3>Settings</h3>
+            </div>
+
+            <div class="links">
+                <a href="#">Languages</a>
+                <a href="#">Currency</a>
+                <a href="#">Download</a>
+            </div>
+        </div>
+
+
+
+    </footer>
+    <!-- Footer Section ends -->
+
+
     
 
 
