made-by footer section!

--- a/index.html
+++ b/index.html
@@ -552,6 +552,21 @@
 
 
     
+    <!-- Made By Secton starts -->
+    <section class="made-by" id="made-by">
+        <div class="site-details">
+            <p>&copy;2022 RealMaster. All rights reserved. <span>Privacy Policy</span> | <span>Terms of Use</span> |
+                <span>Cookie Policy</span> | <span>Company information</span> </p>
+        </div>
+
+        <div class="developer-details">
+            <p>Made with <i class='bx bxs-heart red'></i> and <i class='bx bxs-coffee coffee'></i> by <span><a
+                        href="github.com/niteshprajapat/">Nitesh Prajapat</a></span> </p>
+        </div>
+    </section>
+    <!-- Made By Secton ends -->
+
+    
 
 
     <!-- Custom JS file -->
