scroll-up section added!

--- a/index.html
+++ b/index.html
@@ -567,6 +567,12 @@
     <!-- Made By Secton ends -->
 
     
+    
+    <!-- Scroll up  -->
+    <a href="#" class="scroll-up">
+        <i class='bx bx-up-arrow-alt'></i>
+    </a>
+
 
 
     <!-- Custom JS file -->
