--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Estate Website Clone</title>
 
+    <!-- FavIcon -->
+    <link rel="shortcut icon" href="./img/favicon/favicon.jpg" type="image/x-icon">
+
     <!-- custom css link -->
     <link rel="stylesheet" href="./css/style.css">
 
